--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  /* line-height: 4;   */
 }
 
 button {
