--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,13 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 10px 40px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   ul {
     display: flex;
+    align-items: center;
     li {
       margin: 0 10px;
       list-style-type: none;
-      a {
-        text-decoration: none;
-        color: #000;
-      }
     }
   }
 }
