--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,19 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  font-size: 62.5%;
+
+  --primary: #2c73d2;
+  --primaryLight: #009ce9;
+  --secondary: #00d9b3;
+  --secondaryLight: #8bee86;
+
+  --neutralDarkest: #1a1a1a;
+  --neutralDark: #213547;
+  --neutralMid: red;
+  --neutralLight: #f9f9f9;
+  --neutralLighter: #ffffff;
 }
 
 * {
@@ -27,40 +31,43 @@ a:hover {
   padding: 0;
   box-sizing: border-box;
 }
-
 h1 {
-  font-size: 3.2em;
+  font-size: 4rem;
   /* line-height: 4;   */
+}
+a {
+  color: var(--neutralDark);
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+p {
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.8rem 1.6rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--neutralDarkest);
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
+    color: var(--neutralDark);
+    background-color: var(--neutralLighter);
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--neutralLight);
   }
 }
