--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,7 @@
-header {
-  display: flex;
+main {
+  padding: 2rem 4rem;
+  flex: 1;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 40px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-  ul {
-    display: flex;
-    align-items: center;
-    li {
-      margin: 0 10px;
-      list-style-type: none;
-    }
-  }
+  align-content: center;
+  align-self: center;
 }
