--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,15 +3,18 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 40px;
-  gap: 20px;
+  gap: 16px;
   max-width: 450px;
+  p {
+    margin-bottom: 32px;
+  }
   button {
-    margin-top: 20px;
-    padding: 1.4rem 4rem;
+    border: none;
+    /* padding: 1.4rem 4rem; */
     background-color: var(--primaryLight);
     a {
       font-weight: 600;
+      font-size: 1.4rem;
       color: var(--neutralLighter);
     }
   }
