--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,15 @@
 footer {
   box-shadow: var(--boxShadow);
-  padding: 2rem 4rem;
+  padding: 2rem var(--lateralPadding);
+  background-color: var(--neutralDark);
+  color: var(--neutralLight);
+  a {
+    color: var(--neutralLight);
+    font-size: 1.6rem;
+    font-weight: bold;
+  }
+
+  li {
+    list-style-type: none;
+  }
 }
