--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
 main {
-  padding: 2rem 4rem;
-  flex: 1;
-  align-items: center;
-  align-content: center;
-  align-self: center;
+  padding: 2rem var(--lateralPadding);
 }
