--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 main {
+  display: grid;
+  place-content: center;
+  flex: 1;
   padding: 2rem var(--lateralPadding);
 }
