--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,24 +3,41 @@ header {
   justify-content: center;
   background-color: var(--neutralLighter);
   box-shadow: var(--boxShadow);
-  padding: 1rem var(--lateralPadding);
+  padding: 2rem var(--lateralPadding);
 
   .headerContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: clamp(400px, 80%, 1000px);
-
-    a {
-      text-decoration: none;
-      color: var(--neutral);
-    }
-    button {
+    .burgerButton {
       background-color: transparent;
       border: none;
       span {
         font-size: 2.2rem;
       }
     }
+    a {
+      text-decoration: none;
+      color: var(--neutral);
+    }
+  }
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  > a {
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .navbar {
+    display: none;
+  }
+}
+@media screen and (min-width: 600px) {
+  .burgerButton {
+    display: none;
   }
 }
