--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -1,2 +1,24 @@
 .productsContainer {
+  display: grid;
+  place-content: center;
+}
+.filtersContainer {
+  width: 100%;
+  input {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+  }
+  select {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+  }
+  label {
+    margin: 10px;
+  }
 }
